<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ResetPassword"
    android:orientation="vertical"
    >

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/send_email"
            android:hint="@string/email"
            app:met_floatingLabel="normal"
            android:inputType="textEmailAddress"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textColor="#fff"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/reset_btn"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_reset"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="#000"
            />
    </LinearLayout>

</LinearLayout>