<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activities.Start">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@color/colorPrimaryDark"
        android:drawableStart="@drawable/ic_account_box_white"
        android:drawableLeft="@drawable/ic_account_box_white"
        android:minWidth="250dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:text="@string/register"
        android:textColor="#fff"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:drawableStart="@drawable/ic_login_white"
        android:drawableLeft="@drawable/ic_login_white"
        android:minWidth="250dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:text="@string/login"
        android:textColor="#fff"
        tools:ignore="RtlSymmetry" />
</LinearLayout>